--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,47 +3,42 @@
 
 # Package name
 # https://confluence.hl7.org/display/FHIR/NPM+Package+Specification#NPMPackageSpecification-Packagename
-id: ch.fhir.ig.ch-ig
-canonical: http://fhir.ch/ig/ch-ig
-name: CH_IG
-title: "CH IG (R4)"
-description: Implementation Guide CH IG (R4) for ...
+id: ch.fhir.ig.ch-epr-data-oe
+
+canonical: http://fhir.ch/ig/ch-epr-data-oe
+name: CH-EPR-DATA
+title: "CH EPR DATA (R4)"
+description: EPR Data
 status: draft
 license: CC0-1.0
 copyright: CC0-1.0
 jurisdiction: urn:iso:std:iso:3166#CHE
-date: 2024-08-20
-version: 1.2.1
+date: 2024-12-27
+version: 1.0.0
 fhirVersion: 4.0.1
 copyrightYear: 2024+
 releaseLabel: draft # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 publisher:
-  name: HL7 Switzerland
+  name: Oliver Egger
 contact:
-  - name: HL7 Switzerland
+  - name: ahdis ag
     telecom:
       - system: url
         value: https://www.hl7.ch/
 
 dependencies:
-  hl7.terminology: 5.4.0
-  ch.fhir.ig.ch-core: 5.0.0-ballot
+  hl7.terminology: 6.1.0
+  ch.fhir.ig.ch-vacd: 5.0.0
 
 pages:
   index.md:
     title: Home
-  profiles.md:
-    title: Profiles
-  extensions.md:
-    title: Extensions
-  terminology.md:
-    title: Terminology
+  vacd.md:
+    title: Vaccination
 
 menu:
   Home: index.html
-  Profiles: profiles.html
-  Extensions: extensions.html
-  Terminology: terminology.html
+  Vaccination: vacd.html
   Artifacts: artifacts.html
 
 # Parameters
@@ -55,3 +50,54 @@ parameters:
   display-warnings: true 
   path-resource:
     - input/resources
+    - input/mappings
+
+resources:
+  Bundle/2021-06-22-Vaccination-Spikevax-Impfmodul:
+    name: 2021-06-22-Vaccination-Spikevax-Impfmodul
+    description: Vaccination Administration documented with EPR Vaccination module
+    exampleBoolean: true
+  Bundle/2021-06-22-Vaccination-Spikevax-Impfmodul-corrected:
+    name: 2021-06-22-Vaccination-Spikevax-Impfmodul-corrected
+    description: Vaccination Administration documented with EPR Vaccination module corrected with mapping script
+    exampleBoolean: true
+  Bundle/2021-12-21-Vaccination-Spikevax-Impfmodul:
+    name: 2021-12-21-Vaccination-Spikevax-Impfmodul
+    description: Vaccination Administration documented with EPR Vaccination module
+    exampleBoolean: true
+  Bundle/2021-12-21-Vaccination-Spikevax-Impfmodul-corrected:
+    name: 2021-12-21-Vaccination-Spikevax-Impfmodul-corrected
+    description: Vaccination Administration documented with EPR Vaccination module corrected with mapping script
+    exampleBoolean: true
+  Bundle/2024-06-16-FSME:
+    name: 2024-06-16-FSME
+    description: Vaccination Administration documented with EPR Vaccination module
+    exampleBoolean: true
+  Bundle/2024-06-16-FSME-corrected:
+    name: 2024-06-16-FSME-corrected
+    description: Vaccination Administration documented with EPR Vaccination module
+    exampleBoolean: true
+  Bundle/2024-06-24-emedo:
+    name: 2024-06-24-emedo
+    description: Vaccination Administration provided by emedo (original data from meineimpfungen.ch)
+    exampleBoolean: true
+  Bundle/2024-06-24-emedo-removed-duplicates:
+    name: 2024-06-24-emedo-removed-duplicates
+    description: Removed duplicates from emedo report
+    exampleBoolean: true
+  Bundle/2024-06-24-emedo-corrected:
+    name: 2024-06-24-emedo-corrected
+    description: Vaccination Administration documented with EPR Vaccination module corrected with mapping script
+    exampleBoolean: true
+  Bundle/2024-12-13-FluarixTextra:
+    name: 2024-12-13-FluarixTextra
+    description: Vaccination Administration documented with EPR Vaccination module
+    exampleBoolean: true
+  Bundle/2024-12-13-FluarixTetra-corrected:
+    name: 2024-12-13-FluarixTetra-corrected
+    description: Vaccination Administration documented with EPR Vaccination module corrected with mapping script
+    exampleBoolean: true
+  StructureMap/AdaptImmunizationAdministration:
+    name: AdaptImmunizationAdministration
+    description: Adaptes Immunization Administration that it validates against CH VACD for eHS Vaccination Module and emedo export
+  
